# Backtesting

MarketEngine/: CMakeLists.txt  conanfile.py
MarketEngine/data/: small_lob.csv  small_trades.csv
MarketEngine/include/MarketEngine/Common/: Order.hpp  OrderRequest.hpp  Types.hpp
MarketEngine/include/MarketEngine/DataSource/Csv/: CsvTable.hpp
MarketEngine/include/MarketEngine/Engine/: Engine.hpp  EngineContext.hpp  EventPipeline.hpp
MarketEngine/include/MarketEngine/Engine/Stages/: BookUpdateStage.hpp  MatchingStage.hpp  MetricsStage.hpp  StrategyStage.hpp
MarketEngine/include/MarketEngine/Execution/: ActiveOrder.hpp  ExecutionEvent.hpp  ExecutionReport.hpp  Fill.hpp  MatchingEngine.hpp
MarketEngine/include/MarketEngine/MarketDataFeed/: EventSource.hpp  MarketEvent.hpp
MarketEngine/include/MarketEngine/Metrics/: MetricsEngine.hpp  MetricsEngineContext.hpp  Portfolio.hpp
MarketEngine/include/MarketEngine/OrderBook/: BookEvent.hpp  BookRequest.hpp  LimitOrderBook.hpp  OrderBookConcept.hpp
MarketEngine/include/MarketEngine/Strategy/: ModelEvent.hpp  StrategyAdapter.hpp  StrategyContext.hpp
MarketEngine/lib/: CMakeLists.txt
MarketEngine/lib/DataSource/: CMakeLists.txt
MarketEngine/lib/DataSource/Csv/: CMakeLists.txt  CsvTable.cpp
MarketEngine/lib/MarketDataFeed/: CMakeLists.txt  EventSource.cpp
MarketEngine/lib/Metrics/: CMakeLists.txt  Portfolio.cpp
MarketEngine/lib/OrderBook/: BookEvent.cpp  CMakeLists.txt
MarketEngine/tests/unit/: CMakeLists.txt  CsvTableTests.cpp  EngineTests.cpp  MarketDataFeedTests.cpp  MatchingTests.cpp  OrderBookTests.cpp  PortfolioMetricsTests.cpp  ReplayTests.cpp  StrategyTests.cpp
